--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -33,8 +33,8 @@ jobs:
 
       - name: Setup Git Configuration
         run: |
-          git config user.email "rxmxdhxni@gmail.com"
-          git config user.name "dante4rt"
+          git config user.email "220705058@student.ar-raniry.ac.id"
+          git config user.name "SyukurGit"
 
       - name: Prepare Commit
         run: |
