--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -2,50 +2,52 @@ name: Automated Commit
 
 on:
   push:
-    branches: [master] # Ensures the workflow triggers on pushes to master
+    branches: [master]
 
   schedule:
-    - cron: '0 */4 * * *' # Executes 
-
-  workflow_dispatch: # Allows manual triggering from the GitHub UI
+    - cron: '0 */4 * * *' # 4 jam sekali
+  workflow_dispatch:
 
 permissions:
-  contents: write # Grants permissions to write to the repo
+  contents: write
 
 jobs:
   update_commit:
-    runs-on: ubuntu-latest # Specifies the runner
+    runs-on: ubuntu-latest
 
     steps:
       - name: Setup Debug Information
-        run: echo "::debug::Triggered by ref = ${{github.ref}}"
+        run: echo "::debug::Triggered by ref = ${{ github.ref }}"
 
       - name: Checkout Code
-        uses: actions/checkout@v3 # Latest version for optimized performance
+        uses: actions/checkout@v3
         with:
-          persist-credentials: true # Ensures credentials are available for subsequent steps
-          fetch-depth: 0 # Fetches all history for all branches and tags
+          persist-credentials: true
+          fetch-depth: 0
 
-      - name: Update Timestamp File
+      - name: Generate Random Commits
         run: |
-          current_time=$(date '+%Y-%m-%d %H:%M:%S')
-          echo "Updated on $current_time" > TIMESTAMP.txt
+          # Tentukan jumlah commit acak (5-20)
+          commit_count=$(( ( RANDOM % 16 ) + 5 ))
+          echo "Jumlah commit hari ini: $commit_count"
 
-      - name: Setup Git Configuration
-        run: |
           git config user.email "220705058@student.ar-raniry.ac.id"
           git config user.name "SyukurGit"
 
-      - name: Prepare Commit
-        run: |
           commit_messages=("Update: ⏰" "Refresh: 🔄" "Renew: 🌟" "Revise: 📝" "Amend: 🛠" "Adjust: 🔧" "Change: 📈" "Modify: 🖊" "Transform: 🌀" "Revamp: 🌈")
-          random_msg=${commit_messages[$RANDOM % ${#commit_messages[@]}]}
 
-          git add TIMESTAMP.txt
-          git commit -m "$random_msg - $current_time" || echo "No changes to commit."
+          for i in $(seq 1 $commit_count); do
+            current_time=$(date '+%Y-%m-%d %H:%M:%S')
+            random_msg=${commit_messages[$RANDOM % ${#commit_messages[@]}]}
 
-      - name: GitHub Push
+            echo "Updated on $current_time - Commit #$i" > TIMESTAMP.txt
+
+            git add TIMESTAMP.txt
+            git commit -m "$random_msg - $current_time (Commit $i)" || echo "No changes."
+            sleep 2 # jeda biar kelihatan beda waktu commit
+          done
+
+      - name: Push to GitHub
         uses: ad-m/github-push-action@v0.6.0
         with:
-          directory: '.'
           github_token: ${{ secrets.GITHUB_TOKEN }}
